fix: устранение замечаний